# DBDPlanner

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  create_plan.py  dev_tools.txt  enums.py  font_library.py  install_linux_and_macos.sh  install_windows.bat  main.py  planner.py  pre-commit.py  project_types.py  pyproject.toml  renderer.py  requirements.txt  settings.toml  singleton.py  test.py  test_tools.txt
.github/workflows/: check_updates.sh  code-checking.yml  coverage.yml  crossplatform.yml  crossplatform_installing.yml
src/: constants.py  dataclasses.py  enums.py  exceptions.py  font_library.py  global_mappings.py  planner.py  renderer.py  schemas.py  settings.py  settings_parser.py  singleton.py  types.py  utils.py
src/tests/: __init__.py  manual.py  utils.py
src/tests/auto/: __init__.py  conftest.py  test_dataclasses.py  test_global_mappings.py  test_planner.py  test_renderer.py  test_settings_parser.py  test_types.py
tests/: manual.py
