[project]
name = "DBDPlanner"
version = "2.3.1"
requires-python = ">=3.12"
dependencies = [
    "pip==24.3.1",
    "setuptools==75.6.0",
    "wheel==0.45.1",

    "annotated-types==0.7.0",
    "click==8.1.7",
    "Pillow==11.0.0",
    "pydantic==2.10.2",
    "pydantic-core==2.27.1",
    "typing-extensions==4.12.2",
]

[project.optional-dependencies]
installer = ["uv==0.5.5"]
dev_tools = [
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "filelock==3.16.1",
    "identify==2.6.3",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "platformdirs==4.3.6",
    "pre-commit==4.0.1",
    "pyyaml==6.0.2",
    "ruff==0.8.0",
    "virtualenv==20.28.0",
]
test_tools = [
    "coverage==7.6.8",
    "execnet==2.1.1",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.6.1"
]

[tool.mypy]
python_version = "3.12"
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = ".venv"

[tool.ruff]
line-length = 79
extend-exclude = [".venv*"]
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    # "ASYNC",  # may come in handy in future
    "B",
    "BLE",
    "C4",
    "C901",
    "COM",
    "D",
    # "DTZ",  # not sure that needed
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    # "FIX",  # sometimes it's hard to fix it
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "R",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SLF",
    "SLOT",
    "SIM",
    "T10",
    "T20",
    "TCH",
    "TD",
    "TID",
    # "TRIO",  # may come in handy in future
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",  # this rule forces to write many docs that I think not required
    "D203",  # just alternative for D211
    "D213",  # just alternative for D212
    "S201",  # it's not Flask app
    "S308",  # it's not Django app
    "S610",  # it's not Django app
    "S611",  # it's not Django app
    "TD003",  # not planning write to do with issues link
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"src/tests/auto/**.py" = ["S101"]  # pytest using asserts

[tool.coverage.run]
branch = true
omit = [
    "src/tests/*",
    "pre-commit.py",
    "create_plan.py",
    "test.py",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.json]
pretty_print = true

[tool.pytest.ini_options]
markers = [
    "integration",  # this tests contains many parameters
]
